--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ jobs:
       - name: Install Ngrok
         run: |
           Invoke-WebRequest -Uri "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip" -OutFile "ngrok.zip"
-          Expand-Archive -Path "ngrok.zip" -DestinationPath "$env:USERPROFILE"
-          cd $env:USERPROFILE\ngrok
-          .\ngrok.exe authtoken 2ulYof0x7tvhodtZOmrSN1rQ5sc_3AB8Vnj8ynAuH49kyNHxe
-          Start-Process -NoNewWindow -FilePath .\ngrok.exe -ArgumentList "tcp 3389"
+          Expand-Archive -Path "ngrok.zip" -DestinationPath "$env:USERPROFILE\ngrok"
+          Get-ChildItem "$env:USERPROFILE\ngrok" # Debug: Cek isi folder setelah ekstrak
+          Start-Process -NoNewWindow -FilePath "$env:USERPROFILE\ngrok\ngrok.exe" -ArgumentList "authtoken YOUR_NGROK_AUTH_TOKEN"
+          Start-Process -NoNewWindow -FilePath "$env:USERPROFILE\ngrok\ngrok.exe" -ArgumentList "tcp 3389"
         shell: powershell
 
       - name: Enable RDP and Firewall
@@ -24,5 +24,5 @@ jobs:
         shell: cmd
 
       - name: Get Ngrok Address
-        run: Get-Content $env:USERPROFILE\ngrok\ngrok.log
+        run: Get-Content "$env:USERPROFILE\ngrok\ngrok.log"
         shell: powershell
