--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,41 @@
-name: Free Windows Remote Access
+name: Setup RDP via Ngrok
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch  # Menjalankan workflow secara manual
 
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
-      - name: Install Ngrok
-        run: |
-          Invoke-WebRequest -Uri "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip" -OutFile "ngrok.zip"
-          Expand-Archive -Path "ngrok.zip" -DestinationPath "$env:USERPROFILE\ngrok"
-          Get-ChildItem "$env:USERPROFILE\ngrok" # Debug: Cek isi folder setelah ekstrak
-          Start-Process -NoNewWindow -FilePath "$env:USERPROFILE\ngrok\ngrok.exe" -ArgumentList "authtoken 2ulenCULFgHp45RwYTMHprHN2x4_7yu1YyFMLZPZW8C3y2gVG"
-          Start-Process -NoNewWindow -FilePath "$env:USERPROFILE\ngrok\ngrok.exe" -ArgumentList "tcp 3389"
-        shell: powershell
+    - name: Setup RDP
+      run: |
+        Enable-PSRemoting -Force
+        net user github 123456 /add
+        net localgroup Administrators github /add
+        netsh advfirewall set allprofiles state off
+        Set-ItemProperty 'HKLM:\System\CurrentControlSet\Control\Terminal Server\' -Name "fDenyTSConnections" -Value 0
+        Get-NetFirewallRule -DisplayGroup "Remote Desktop" | Set-NetFirewallRule -Enabled True
+        Add-WindowsFeature -Name RDS-RD-Server -IncludeAllSubFeature -IncludeManagementTools
 
-      - name: Enable RDP and Firewall
-        run: |
-          reg add "HKLM\System\CurrentControlSet\Control\Terminal Server" /v fDenyTSConnections /t REG_DWORD /d 0 /f
-          netsh advfirewall firewall set rule group="remote desktop" new enable=yes
-          net localgroup Administrators runneradmin /add
-          net user runneradmin MySecurePassword123!
-        shell: cmd
+    - name: Download Ngrok
+      run: |
+        Invoke-WebRequest -Uri "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip" -OutFile "ngrok.zip"
+        Expand-Archive ngrok.zip -DestinationPath "$env:USERPROFILE\ngrok"
 
-      - name: Get Ngrok Address
-        run: Get-Content "$env:USERPROFILE\ngrok\ngrok.log"
-        shell: powershell
+    - name: Start Ngrok Tunnel
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+      run: |
+        $env:USERPROFILE\ngrok\ngrok.exe authtoken $env:2ulenCULFgHp45RwYTMHprHN2x4_7yu1YyFMLZPZW8C3y2gVG
+        Start-Process -NoNewWindow -FilePath "$env:USERPROFILE\ngrok\ngrok.exe" -ArgumentList "tcp 3389"
+
+    - name: Get Ngrok URL
+      run: |
+        Start-Sleep -s 10
+        $url = Invoke-RestMethod -Uri "http://127.0.0.1:4040/api/tunnels"
+        echo "Ngrok RDP Address: $($url.tunnels[0].public_url)"
+
+    - name: Keep Alive
+      run: |
+        while ($true) { Start-Sleep -s 3600 }
