--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,12 @@ jobs:
     - name: Setup RDP
       run: |
         Enable-PSRemoting -Force
-        net user github 123456 /add
+        net user github "Github@1234" /add
         net localgroup Administrators github /add
         netsh advfirewall set allprofiles state off
         Set-ItemProperty 'HKLM:\System\CurrentControlSet\Control\Terminal Server\' -Name "fDenyTSConnections" -Value 0
         Get-NetFirewallRule -DisplayGroup "Remote Desktop" | Set-NetFirewallRule -Enabled True
-        Add-WindowsFeature -Name RDS-RD-Server -IncludeAllSubFeature -IncludeManagementTools
+        Install-WindowsFeature -Name RDS-RD-Server -IncludeAllSubFeature -IncludeManagementTools
 
     - name: Download Ngrok
       run: |
@@ -25,16 +25,12 @@ jobs:
 
     - name: Start Ngrok Tunnel
       env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        NGROK_AUTH_TOKEN: ${{ 2ulvPqxYS3YdaQOMNwHJ6rwFdxe_6SshAstYuoRTFmAbN4A7E }}
       run: |
-        $env:USERPROFILE\ngrok\ngrok.exe authtoken $env:2ulenCULFgHp45RwYTMHprHN2x4_7yu1YyFMLZPZW8C3y2gVG
+        Start-Process -NoNewWindow -FilePath "$env:USERPROFILE\ngrok\ngrok.exe" -ArgumentList "authtoken $env:NGROK_AUTH_TOKEN"
         Start-Process -NoNewWindow -FilePath "$env:USERPROFILE\ngrok\ngrok.exe" -ArgumentList "tcp 3389"
-
-    - name: Get Ngrok URL
-      run: |
         Start-Sleep -s 10
-        $url = Invoke-RestMethod -Uri "http://127.0.0.1:4040/api/tunnels"
-        echo "Ngrok RDP Address: $($url.tunnels[0].public_url)"
+        Invoke-RestMethod -Uri "http://127.0.0.1:4040/api/tunnels"
 
     - name: Keep Alive
       run: |
