--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,68 +1,5 @@
-name: Setup RDP via Ngrok
-
-on: 
-  workflow_dispatch  # Workflow dapat dijalankan secara manual
-
-jobs:
-  build:
-    runs-on: windows-latest
-
-    steps:
-    - name: Setup RDP
-      run: |
-        net user github "Github@1234" /add
-        net localgroup Administrators github /add
-        netsh advfirewall set allprofiles state off
-        Set-ItemProperty 'HKLM:\System\CurrentControlSet\Control\Terminal Server\' -Name "fDenyTSConnections" -Value 0
-        Get-NetFirewallRule -DisplayGroup "Remote Desktop" | Set-NetFirewallRule -Enabled True
-      shell: powershell
-
-    - name: Download Ngrok
-      run: |
-        Invoke-WebRequest -Uri "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip" -OutFile "ngrok.zip"
-        Expand-Archive -Path "ngrok.zip" -DestinationPath "$env:USERPROFILE\ngrok"
-      shell: powershell
-
-    - name: Authenticate Ngrok
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-      run: |
-        $ngrokExe = "$env:USERPROFILE\ngrok\ngrok.exe"
-        & $ngrokExe authtoken $env:NGROK_AUTH_TOKEN
-        Start-Sleep -Seconds 5
-      shell: powershell
-
-    - name: Start Ngrok Tunnel
-      run: |
-        $ngrokExe = "$env:USERPROFILE\ngrok\ngrok.exe"
-        # Mulai tunnel untuk port 3389 (RDP)
-        Start-Process -NoNewWindow -FilePath $ngrokExe -ArgumentList "tcp 3389"
-        Start-Sleep -Seconds 20
-      shell: powershell
-
-    - name: Get Ngrok Tunnel URL
-      run: |
-        $response = $null
-        $maxRetries = 10
-        $retry = 0
-        while (-not $response -and $retry -lt $maxRetries) {
-            try {
-                $response = Invoke-RestMethod -Uri "http://127.0.0.1:4040/api/tunnels" -ErrorAction Stop
-            } catch {
-                Write-Output "Tunnel belum aktif. Mencoba lagi dalam 10 detik..."
-                Start-Sleep -Seconds 10
-                $retry++
-            }
-        }
-        if ($response) {
-            Write-Output "Ngrok Tunnel URL: $($response.tunnels[0].public_url)"
-        } else {
-            Write-Output "Gagal mendapatkan URL tunnel Ngrok setelah beberapa percobaan."
-            exit 1
-        }
-      shell: powershell
-
-    - name: Keep Alive
-      run: |
-        while ($true) { Start-Sleep -Seconds 3600 }
-      shell: powershell
+- name: Install Cloudflare Tunnel
+  run: |
+    Invoke-WebRequest -Uri "https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-windows-amd64.exe" -OutFile "cloudflared.exe"
+    Move-Item -Path "cloudflared.exe" -Destination "$env:USERPROFILE\cloudflared.exe"
+  shell: powershell
